cmake_minimum_required(VERSION 3.15)
project(School_21_PUSHSWAP C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(src)

add_executable(School_21_PUSHSWAP
        inc/ft_printf.h
        inc/libft.h
        inc/push_swap.h
        src/ft_abs.c
        src/ft_atoi.c
        src/ft_bzero.c
        src/ft_colors.c
        src/ft_dtoa.c
        src/ft_int_length_base.c
        src/ft_isalnum.c
        src/ft_isalpha.c
        src/ft_isascii.c
        src/ft_isdigit.c
        src/ft_isprint.c
        src/ft_isspace.c
        src/ft_itoa.c
        src/ft_lstadd.c
        src/ft_lstadd_last.c
        src/ft_lstdel.c
        src/ft_lstdelone.c
        src/ft_lstiter.c
        src/ft_lstmap.c
        src/ft_lstnew.c
        src/ft_lstrev.c
        src/ft_ltoa.c
        src/ft_memalloc.c
        src/ft_memccpy.c
        src/ft_memchr.c
        src/ft_memcmp.c
        src/ft_memcpy.c
        src/ft_memdel.c
        src/ft_memmove.c
        src/ft_memset.c
        src/ft_mng_float.c
        src/ft_mng_params.c
        src/ft_pow.c
        src/ft_print_arg.c
        src/ft_print_char.c
        src/ft_print_float.c
        src/ft_print_float_concat.c
        src/ft_print_float_determ.c
        src/ft_print_float_spec.c
        src/ft_print_int_0.c
        src/ft_print_int_1.c
        src/ft_print_oct_hex.c
        src/ft_print_str.c
        src/ft_printf.c
        src/ft_putchar.c
        src/ft_putchar_fd.c
        src/ft_putendl.c
        src/ft_putendl_fd.c
        src/ft_putnbr.c
        src/ft_putnbr_fd.c
        src/ft_putstr.c
        src/ft_putstr_fd.c
        src/ft_read_params.c
        src/ft_strcat.c
        src/ft_strchr.c
        src/ft_strchrn.c
        src/ft_strclr.c
        src/ft_strcmp.c
        src/ft_strcpy.c
        src/ft_strdel.c
        src/ft_strdup.c
        src/ft_strequ.c
        src/ft_striter.c
        src/ft_striteri.c
        src/ft_strjoin.c
        src/ft_strlcat.c
        src/ft_strlen.c
        src/ft_strmap.c
        src/ft_strmapi.c
        src/ft_strncat.c
        src/ft_strncmp.c
        src/ft_strncpy.c
        src/ft_strnequ.c
        src/ft_strnew.c
        src/ft_strnstr.c
        src/ft_strrchr.c
        src/ft_strrev.c
        src/ft_strsplit.c
        src/ft_strstr.c
        src/ft_strsub.c
        src/ft_strtolower.c
        src/ft_strtoupper.c
        src/ft_strtrim.c
        src/ft_tolower.c
        src/ft_toupper.c
        src/ft_wordlen.c
        src/ft_wrdcnt.c
        main.c)
